[FIX] versus slide's alignment and size issue

--- a/src/slides/versus/versus.module.scss
+++ b/src/slides/versus/versus.module.scss
@@ -1,21 +1,19 @@
 .versus {
     display: grid;
+    grid-auto-flow: column;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto minmax(0, auto) auto;
+    align-content: center;
     gap: 2rem;
 
     block-size: inherit;
 
-    .column {
-        display: grid;
-        grid-template-rows: auto minmax(0, 1fr) auto;
-        align-items: center;
-        justify-items: center;
+    .heading {
+        font-size: 2.4rem;
+        font-weight: 700;
+    }
 
-        block-size: inherit;
-
-        .heading {
-            font-size: 2.4rem;
-            font-weight: 700;
-        }
+    img {
+        margin: 0;
     }
 }
